--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,7 +1,7 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
     <ion-toolbar>
         <ion-title>
-            Pendientes
+            Terminados
         </ion-title>
     </ion-toolbar>
 </ion-header>
