--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -7,11 +7,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" color="dark">
-    <ion-list color="dark">
-        <ion-item *ngFor="let item of deseosService.listas" detail color="dark">
-            <ion-label>{{ item.titulo }}</ion-label>
-        </ion-item>
-    </ion-list>
+
+    <app-listas [terminada]="false"></app-listas>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button color="tertiary" (click)="agregarLista()">
