--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,11 +1,11 @@
 <ion-header [translucent]="true" class="ion-no-border">
-    <ion-toolbar>
+    <ion-toolbar color="dark">
         <ion-title>
             Terminados
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-
+<ion-content [fullscreen]="true" color="dark">
+    <app-listas [terminada]="true"></app-listas>
 </ion-content>
